--- a/scrapgoat/scrap_pickups_app/templates/scrap_pickups_app/profile.html
+++ b/scrapgoat/scrap_pickups_app/templates/scrap_pickups_app/profile.html
@@ -1,21 +1,25 @@
 {% extends 'scrap_pickups_app/base.html' %}
+{% load crispy_forms_tags %}
 {% block title %}Profile Page{% endblock %}
 {% block content %}
 <h1>Profile Info</h1>
 <hr/>
 <p>
-    You can save your details for pickups.
+    You can save your details and submit pickups faster.
 </p>
 
 <!--Form when user is not logged in-->
 <div align="left">
     <form method="post" action="{% url 'profile_info' %}">
         {% csrf_token %}
-        {{form.as_p}}
+        {{form|crispy}}
+        <br/>
+        <h3>Save Addresses</h3>
+        <hr/>
         {{usls.management_form}}
         {% for usl in usls %}
         <div>
-            {{usl.as_p}}
+            {{usl|crispy}}
         </div>
         {% endfor %}
         <button type="submit" class="btn btn-primary">Submit</button>
