changed pickup templates layout and got email working

--- a/scrapgoat/scrap_pickups_app/templates/scrap_pickups_app/index.html
+++ b/scrapgoat/scrap_pickups_app/templates/scrap_pickups_app/index.html
@@ -4,11 +4,11 @@
 {% block content %}
 <div class="row">
     <div class="col">
-        <h1>Scapegoat Pickups</h1>
+        <h1>Scrapgoat Pickups</h1>
         <hr/>
         <p>
-            You may submit a scrap pick up request below.<br/>
-            You can also login to save your user info and set common pick up locations.
+            You may submit a scrap pickup request below.<br/>
+            You can also log in to save your user info and set common pick up locations.
         </p>
     </div>
 </div>
