--- a/scrapgoat/scrap_pickups_app/templates/scrap_pickups_app/index.html
+++ b/scrapgoat/scrap_pickups_app/templates/scrap_pickups_app/index.html
@@ -24,8 +24,10 @@
         </form>
     </div>
     <div class="col-md-6" align="left">
+        <img src="/media/images/scrapgoat_logo.jpg" class="img-fluid" alt="Scrapgoat Logo">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Due to the high price of gas, we ask for an optional $5 donation with each pickup.<br/>
+            Thank you!
         </p>
     </div>
 </div>
