--- a/scrapgoat/scrap_pickups_app/templates/scrap_pickups_app/pickups.html
+++ b/scrapgoat/scrap_pickups_app/templates/scrap_pickups_app/pickups.html
@@ -12,6 +12,38 @@
 </div>
 <br>
 
+<!--Show Pagination Links-->
+<div class="row">
+    <nav aria-label="Page navigation">
+        <ul class="pagination">
+            {% if pickups.has_previous %}
+            <li class="page-item">
+              <a class="page-link" href="?page={{pickups.previous_page_number}}" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+              </a>
+            </li>
+            {% endif %}
+
+            {% for n in pickups.paginator.page_range %}
+              {% if pickups.number == n %}
+                <li class="page-item active">
+                  <span class="page-link">{{ n }}<span class="sr-only"></span></span>
+                </li>
+              {% elif n > pickups.number|add:'-3' and n < pickups.number|add:'3' %}
+                <li class="page-item"><a class="page-link" href="?page={{ n }}">{{ n }}</a></li>
+              {% endif %}
+            {% endfor %}
+
+            {% if pickups.has_next %}
+              <li class="page-item">
+                <a class="page-link" href="?page={{pickups.next_page_number}}" aria-label="Next">
+                  <span aria-hidden="true">&raquo;</span>
+                </a>
+              </li>
+            {% endif %}
+        </ul>
+    </nav>
+</div>
 <!--Display pickups as list overview-->
 <div class="row" align="left">
     <table class="table table-striped">
